src/test/deca/context/valid/class_extends_object.deca
/*
    Description : Classe qui étends la classe Object

    Résultat : OK
*/
class C extends Object{}
