src/test/deca/context/invalid/object_class_name.deca
/*
    Description : Classe nommée object

    Résultat : Erreur contextuelle (règle 1.3 condition implicite)
*/
class Object{}
